test/deca/context/valid/3_17_decl_int.deca
// Description:
//    Affectation et typage : type différent de void

{
    int i ;
}