test/deca/context/invalid/3_17_decl_void.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: void type invalide

{
    void v;
}
